--- a/support.html
+++ b/support.html
@@ -38,9 +38,9 @@
       <div class="box">
         <p style="margin:0 0 6px;">
           Email для связи:
-          <strong><a href="mailto:aleksandruddenisevich@gmail.com">aleksandruddenisevich@gmail.com</a></strong>
+          <strong><a href="mailto:aleksandrudenisevich@gmail.com">aleksandrudenisevich@gmail.com</a></strong>
         </p>
-        <a class="btn" href="mailto:aleksandruddenisevich@gmail.com?subject=English%20SOS%20%E2%80%94%20%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0">
+        <a class="btn" href="mailto:aleksandrudenisevich@gmail.com?subject=English%20SOS%20%E2%80%94%20%D0%9F%D0%BE%D0%B4%D0%B4%D0%B5%D1%80%D0%B6%D0%BA%D0%B0">
           Написать в поддержку
         </a>
         <div class="small">
